fixing containers overflow

--- a/src/styles/_containers_and_frames.scss
+++ b/src/styles/_containers_and_frames.scss
@@ -8,6 +8,8 @@
 	/* position style and default z */
 	position: fixed;
 	z-index: 10;
+
+	overflow: hidden;
 }
 
 /* game div with background image*/
@@ -19,7 +21,8 @@
 	border-image-repeat: repeat;
 	border-image-slice: 6 6 6 6;
 	border-image-width: 18px;
-	padding: 25px;
+	border-width: 13px;
+	padding: 12px;
 
 	/* internal border */
 	box-sizing: border-box;
@@ -41,8 +44,9 @@
 	border-image-source: url("img/border-image-golden.png");
 	border-image-repeat: repeat;
 	border-image-slice: 4 4 4 4;
-	border-image-width: 13px;
-	padding: 25px;
+	border-image-width: 15px;
+	border-width: 13px;
+	padding: 12px;
 
 	/* internal border */
 	box-sizing: border-box;
@@ -65,7 +69,8 @@
 	border-image-repeat: repeat;
 	border-image-slice: 8 8 8 8;
 	border-image-width: 18px;
-	padding: 25px;
+	border-width: 13px;
+	padding: 12px;
 
 	/* internal border */
 	box-sizing: border-box;
@@ -86,11 +91,12 @@
 
 	/* border */
 	border-style: solid;
-	border-width: 25px 25px 25px 25px;
-	-moz-border-image: url("img/border-image-grey.png") 25% repeat repeat;
-	-webkit-border-image: url("img/border-image-grey.png") 25% repeat repeat;
-	-o-border-image: url("img/border-image-grey.png") 25% repeat repeat;
-	border-image: url("img/border-image-grey.png") 25% repeat repeat;
+	border-image-source: url("img/border-image-grey.png");
+	border-image-repeat: repeat;
+	border-image-slice: 3 3 3 3;
+	border-image-width: 7px;
+	border-width: 7px;
+	padding: 12px;
 
 	/* internal border */
 	box-sizing: border-box;
